--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://zeroprojects17.github.io/clamp",
-  "name": "pill",
+  "homepage": "https://zeroprojects17.github.io/clampv2",
+  "name": "clampv2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
